force-app/main/default/objects/Staff_UOS__c/Staff_UOS__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Staff UOS</label>
    <nameField>
        <displayFormat>StaffUOS-{0000}</displayFormat>
        <label>Staff UOS #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff UOS</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>