force-app/main/default/objects/Staff_UOS__c/fields/Bill_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_Code__c</fullName>
    <label>Bill Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billable</fullName>
            </value>
            <value>
                <fullName>Overhead</fullName>
            </value>
            <value>
                <fullName>Etc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>