force-app/main/default/objects/Staff_UOS__c/fields/Case_Record__c.field-meta.xml
<CustomField>
    <fullName>Case_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Record</label>
    <referenceTo>Case_Record__c</referenceTo>
    <relationshipLabel>Staff UOS</relationshipLabel>
    <relationshipName>Staff_Time</relationshipName>
    <type>Lookup</type>
</CustomField>