force-app/main/default/objects/Staff_UOS__c/fields/Case_Record_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Status__c</fullName>
    <label>Case Record Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>