force-app/main/default/objects/Staff_UOS__c/fields/Group_Class_Session__c.field-meta.xml
<CustomField>
    <fullName>Group_Class_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group-Class Service Entry</label>
    <referenceTo>Group_Class_Session__c</referenceTo>
    <relationshipLabel>Staff UOS</relationshipLabel>
    <relationshipName>Staff_Time</relationshipName>
    <type>Lookup</type>
</CustomField>