force-app/main/default/objects/Staff_UOS__c/fields/Service_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Service_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Team Member</label>
    <referenceTo>Service_Team_Member__c</referenceTo>
    <relationshipLabel>Staff UOS</relationshipLabel>
    <relationshipName>Staff_UOS</relationshipName>
    <type>Lookup</type>
</CustomField>