force-app/main/default/objects/Staff_UOS__c/fields/Service_Team_Member_Role__c.field-meta.xml
<CustomField>
    <fullName>Service_Team_Member_Role__c</fullName>
    <formula>TEXT(Service_Team_Member__r.Role__c)</formula>
    <label>Service Team Member Role</label>
    <type>Text</type>
</CustomField>