force-app/main/default/objects/Staff_UOS__c/fields/Staff_Contact__c.field-meta.xml
<CustomField>
    <fullName>Staff_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>In some use cases Staff can also be contacts who are not logged in to the system.</description>
    <label>Staff (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Staff UOS (Staff (Contact))</relationshipLabel>
    <relationshipName>Staff_UOS</relationshipName>
    <type>Lookup</type>
</CustomField>