force-app/main/default/objects/Staff_UOS__c/fields/Staff_Group_Class_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Staff_Group_Class_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff Group/Class Assignment</label>
    <referenceTo>Staff_Group_Class_Assignment__c</referenceTo>
    <relationshipLabel>Staff UOS</relationshipLabel>
    <relationshipName>Staff_UOS</relationshipName>
    <type>Lookup</type>
</CustomField>