force-app/main/default/objects/Staff_UOS__c/fields/Staff_Name__c.field-meta.xml
<CustomField>
    <fullName>Staff_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(Service_Team_Member__c)), Service_Team_Member__r.Staff__r.Full_Name__c, IF(NOT(ISBLANK( Staff_Group_Class_Assignment__c )), Staff_Group_Class_Assignment__r.Staff__r.Full_Name__c ,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff Name</label>
    <type>Text</type>
</CustomField>